--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -30,8 +30,12 @@ jobs:
     - name: Test Swift Install
       run: swift --version
 
-    - name: Install GCC & GNU Embedded Toolchain for ARM
+    - name: Install GCC, GNU Embedded Toolchain for ARM, Ninja
       run: sudo apt install gcc-arm-none-eabi libnewlib-arm-none-eabi build-essential g++ libstdc++-arm-none-eabi-newlib ninja-build
+
+    - name: Pico SDK CMake init
+      run: wget https://raw.githubusercontent.com/raspberrypi/pico-sdk/master/pico_sdk_init.cmake; export PICO_SDK_PATH=${pwd}
+
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
