--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: mkdir external; wget https://raw.githubusercontent.com/raspberrypi/pico-sdk/master/external/pico_sdk_import.cmake; cd ..; cmake -B ${{github.workspace}}/build -G Ninja -DPICO_SDK_PATH=${pwd} -DPICO_BORAD=pico2 -DPICO_SDK_FETCH_FROM_GIT=on
+      run: mkdir external; cd external; wget https://raw.githubusercontent.com/raspberrypi/pico-sdk/master/external/pico_sdk_import.cmake; cd ..; cmake -B ${{github.workspace}}/build -G Ninja -DPICO_SDK_PATH=${pwd} -DPICO_BORAD=pico2 -DPICO_SDK_FETCH_FROM_GIT=on
 
     - name: Build
       # Build your program with the given configuration
