--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: test pwd
+      run: echo ${pwd}; ls -la;
+
+    
     - name: Install Swift
       uses: slashmo/install-swift@v0.4.0
       with:
