--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -1,6 +1,6 @@
 # This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
-name: Test build errors for RP2350
+name: Build for RP2350
 
 on:
   push:
@@ -21,10 +21,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: test pwd
-      run: echo ${pwd}; ls -la;
-
     
     - name: Install Swift
       uses: slashmo/install-swift@v0.4.0
@@ -41,7 +37,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: mkdir external; cd external; wget https://raw.githubusercontent.com/raspberrypi/pico-sdk/master/external/pico_sdk_import.cmake; cd ..; ls -la; cmake -B ${{github.workspace}}/build -G Ninja -DPICO_SDK_PATH=${pwd} -DPICO_BORAD=pico2 -DPICO_SDK_FETCH_FROM_GIT=on
+      run: mkdir external; cd external; wget https://raw.githubusercontent.com/raspberrypi/pico-sdk/master/external/pico_sdk_import.cmake; cd ..; ls -la; cmake -B ${{github.workspace}}/build -G Ninja -DPICO_SDK_PATH=. -DPICO_BORAD=pico2 -DPICO_SDK_FETCH_FROM_GIT=ON
 
     - name: Build
       # Build your program with the given configuration
