--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -34,12 +34,12 @@ jobs:
       run: sudo apt install gcc-arm-none-eabi libnewlib-arm-none-eabi build-essential g++ libstdc++-arm-none-eabi-newlib ninja-build
     
     - name: Install Pico SDK
-      run: git clone https://github.com/raspberrypi/pico-sdk/; git submodule update --init;
+      run: cd ${{github.workspace}}/..; git clone https://github.com/raspberrypi/pico-sdk/; git submodule update --init;
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: export PICO_SDK_PATH=./pico-sdk; cmake -B ${{github.workspace}}/build -G Ninja -DPICO_BORAD=pico2 -DPICO_SDK_FETCH_FROM_GIT=ON
+      run: export PICO_SDK_PATH=../pico-sdk; cmake -B ${{github.workspace}}/build -G Ninja -DPICO_BORAD=pico2 -DPICO_SDK_FETCH_FROM_GIT=ON
 
     - name: Build
       # Build your program with the given configuration
