--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -43,5 +43,7 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      run:  ; cmake -G Ninja -B build; cmake --build ${{github.workspace}}/build 
+      run: cmake --build ${{github.workspace}}/build 
+
+
 
