--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -45,5 +45,14 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build 
 
+    - name: Release
+        uses: softprops/action-gh-release@v2
+        with: 
+          make_latest: true
+          files: ${{github.workspace}}/build/swift-blinky.uf2
+          
+
+        
+
 
 
