--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -46,10 +46,10 @@ jobs:
       run: cmake --build ${{github.workspace}}/build 
 
     - name: Release
+    uses: softprops/action-gh-release@v2
       with: 
         make_latest: true
-        tag_name: pico2-autorelease
-        if: startsWith(github.ref, 'refs/tags/')
+        tag_name: pico2-autorelease        
         files: ${{github.workspace}}/build/swift-blinky.uf2
           
 
