--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -8,9 +8,13 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Debug
+  PICO_BOARD: pico2
 
 jobs:
   build:
@@ -39,7 +43,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: export PICO_SDK_PATH=${{github.workspace}}/pico-sdk; export PICO_BOARD=pico2; cmake -B ${{github.workspace}}/build -G Ninja .
+      run: export PICO_SDK_PATH=${{github.workspace}}/pico-sdk; cmake -B ${{github.workspace}}/build -G Ninja .
 
     - name: Build
       # Build your program with the given configuration
