--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -1,6 +1,6 @@
 # This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
-name: Pico2 Build
+name: Pico2 Build & Release
 
 on:
   push:
@@ -36,7 +36,11 @@ jobs:
       run: sudo apt install gcc-arm-none-eabi libnewlib-arm-none-eabi build-essential g++ libstdc++-arm-none-eabi-newlib ninja-build
     
     - name: Install Pico SDK
-      run: cd ${{github.workspace}}; git clone https://github.com/raspberrypi/pico-sdk.git ; git submodule update --init;
+      run: |
+        cd ${{github.workspace}}
+        git clone https://github.com/raspberrypi/pico-sdk.git
+        cd ${{github.workspace}}/pico-sdk
+        git submodule update --init
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
