--- a/.github/workflows/cmake-PRtests.yml
+++ b/.github/workflows/cmake-PRtests.yml
@@ -33,7 +33,11 @@ jobs:
       run: sudo apt install gcc-arm-none-eabi libnewlib-arm-none-eabi build-essential g++ libstdc++-arm-none-eabi-newlib ninja-build
     
     - name: Install Pico SDK
-      run: cd ${{github.workspace}}; git clone https://github.com/raspberrypi/pico-sdk.git ; git submodule update --init;
+      run: |
+        cd ${{github.workspace}}
+        git clone https://github.com/raspberrypi/pico-sdk.git
+        cd ${{github.workspace}}/pico-sdk
+        git submodule update --init
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
